--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                 <label>7. Darf eine 90-Jährige Oma mit vielen Krankheiten (z. B. 
                     <span class="definition" onmouseover="showTooltip(event, 'Demenz ist eine Krankheit, bei der das Gedächtnis und das Denken schlechter werden.')"
                           onmouseout="hideTooltip()">Demenz</span>, 
-                    <span class="definition" onmouseover="showTooltip(event, 'Alzheimer ist eine Form der Demenz, die sehr schwer wird und das Gedächtnis betrifft.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'Alzheimer ist eine Form der Demenz, die das Gedächtnis betrifft.')"
                           onmouseout="hideTooltip()">Alzheimer</span>, 
-                    <span class="definition" onmouseover="showTooltip(event, 'Krebs im Endstadium bedeutet, dass der Krebs sehr schlimm ist und die Person bald sterben wird.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'Krebs im Endstadium ist eine sehr fortgeschrittene Krebsform, die oft tödlich ist.')"
                           onmouseout="hideTooltip()">Krebs im Endstadium</span>) Sterbehilfe erhalten?</label><br>
                 <div>
                     <label><input type="radio" name="ageWOMAN" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -185,9 +185,9 @@
             <!-- Frage 9 -->
             <div class="form-field">
                 <label>9. Darf ein 40-Jähriger Familienvater mit einem 
-                    <span class="definition" onmouseover="showTooltip(event, 'Ein Schlaganfall passiert, wenn das Gehirn nicht genug Blut bekommt und geschädigt wird.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'Ein Schlaganfall geschieht, wenn das Gehirn nicht genug Sauerstoff bekommt.')"
                           onmouseout="hideTooltip()">Schlaganfall</span> (mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'Eine einseitige Lähmung bedeutet, dass eine Körperseite nicht mehr richtig funktioniert.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'Eine einseitige Lähmung bedeutet, dass eine Körperseite nicht mehr funktioniert.')"
                           onmouseout="hideTooltip()">einer einseitigen Lähmung</span>) Sterbehilfe beanspruchen?</label><br>
                 <div>
                     <label><input type="radio" name="ageFATHER" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -199,7 +199,7 @@
             <!-- Frage 10 -->
             <div class="form-field">
                 <label>10. Darf eine 29-Jährige Frau mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'Schizophrenie ist eine Krankheit, die das Denken und Fühlen einer Person beeinflusst.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'Schizophrenie ist eine psychische Erkrankung, die das Denken und Fühlen beeinflusst.')"
                           onmouseout="hideTooltip()">Schizophrenie</span> Sterbehilfe in Anspruch nehmen?</label><br>
                 <div>
                     <label><input type="radio" name="ageWOMAN2" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -211,7 +211,7 @@
             <!-- Frage 11 -->
             <div class="form-field">
                 <label>11. Darf ein 35-Jähriger Soldat mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'PTBS ist ein Problem, das nach schlimmen Erlebnissen kommt, und kann Traurigkeit oder Angst verursachen.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'PTBS steht für Posttraumatische Belastungsstörung. Es passiert oft nach schlimmen Erlebnissen und verursacht starke Angst oder Traurigkeit.')"
                           onmouseout="hideTooltip()">PTBS</span> (Posttraumatische Belastungsstörung) Sterbehilfe erhalten?</label><br>
                 <div>
                     <label><input type="radio" name="ageSOLDIER" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -223,7 +223,7 @@
             <!-- Frage 12 -->
             <div class="form-field">
                 <label>12. Darf ein 7-Jähriges Kind mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'Bipolare Störung ist eine Krankheit, bei der die Stimmung sehr schnell wechselt.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'Ein Stimmungswechsel, bei der Stimmung und Energie schnell wechseln.')"
                           onmouseout="hideTooltip()">bipolarer Störung</span> Sterbehilfe beanspruchen?</label><br>
                 <div>
                     <label><input type="radio" name="ageKID2" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -235,7 +235,7 @@
             <!-- Frage 13 -->
             <div class="form-field">
                 <label>13. Darf eine 52-Jährige Frau mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'ME/CFS ist ein Zustand, der extreme Müdigkeit verursacht und die Lebensqualität stark beeinträchtigen kann.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'ME/CFS ist eine schwere Erkrankung, die extreme Müdigkeit verursacht.')"
                           onmouseout="hideTooltip()">ME/CFS</span> Sterbehilfe erhalten?</label><br>
                 <div>
                     <label><input type="radio" name="ageWOMAN3" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -247,7 +247,7 @@
             <!-- Frage 14 -->
             <div class="form-field">
                 <label>14. Darf eine 14-Jährige mit 
-                    <span class="definition" onmouseover="showTooltip(event, 'Das Down-Syndrom ist eine genetische Störung, die eine Person auf besondere Weise veranlasst.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'Das Down-Syndrom ist eine genetische Störung, die die körperliche und geistige Entwicklung beeinflussen kann.')"
                           onmouseout="hideTooltip()">Down-Syndrom</span> Sterbehilfe beanspruchen?</label><br>
                 <div>
                     <label><input type="radio" name="ageGIRL" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -259,7 +259,7 @@
             <!-- Frage 15 -->
             <div class="form-field">
                 <label>15. Darf ein 27-Jähriger Mann, der 
-                    <span class="definition" onmouseover="showTooltip(event, 'Querschnittslähmung bedeutet, dass die Verbindung zwischen dem Gehirn und dem Körper beschädigt ist.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'Querschnittslähmung ist, wenn der Körper nicht mehr richtig funktioniert aufgrund einer Verletzung des Rückenmarks.')"
                           onmouseout="hideTooltip()">querschnittsgelähmt</span> im Rollstuhl sitzt, Sterbehilfe in Anspruch nehmen?</label><br>
                 <div>
                     <label><input type="radio" name="ageMAN" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -276,7 +276,7 @@
                     <label><input type="checkbox" name="whoDecides" value="Familie oder gesetzliche Vertreter">Familie oder gesetzliche Vertreter</label><br>
                     <label><input type="checkbox" name="whoDecides" value="Ärzte und Pfleger">Ärzte und Pfleger</label><br>
                     <label><input type="checkbox" name="whoDecides" value="Ethikkommissionen"> 
-                    <span class="definition" onmouseover="showTooltip(event, 'Ethikkommissionen sind Gruppen von Menschen, die über schwierige medizinische Entscheidungen nachdenken und beraten.')"
+                    <span class="definition" onmouseover="showTooltip(event, 'Ethikkommissionen sind Gruppen von Fachleuten, die über schwierige medizinische Entscheidungen beraten.')"
                           onmouseout="hideTooltip()">Ethikkommissionen</span></label>
                 </div>
             </div>
@@ -294,7 +294,7 @@
 
             <!-- Frage 18 -->
             <div class="form-field">
-                <label>18. Findest du Sterbehilfe <span class="definition" onmouseover="showTooltip(event, 'Moralisch vertretbar bedeutet, dass es richtig ist, wenn man nach den Prinzipien von gut und schlecht fragt.')"
+                <label>18. Findest du Sterbehilfe <span class="definition" onmouseover="showTooltip(event, 'Moralisch vertretbar bedeutet, dass es akzeptabel oder richtig ist, darüber nachzudenken und Entscheidungen zu treffen.')"
                     onmouseout="hideTooltip()">moralisch vertretbar</span>?</label><br>
                 <div>
                     <label><input type="radio" name="moralEuthanasia" value="Ja" onchange="lockThis(this)">Ja</label><br>
@@ -340,38 +340,43 @@
 
             // Daten aus dem Formular sammeln und in JSON-Format umwandeln
             formData.forEach((value, key) => {
-                if (Array.isArray(data[key])) {
-                    data[key].push(value);
+                if (key in data) {
+                    // Wenn der Schlüssel bereits existiert, erstellen Sie ein Array
+                    if (Array.isArray(data[key])) {
+                        data[key].push(value);
+                    } else {
+                        data[key] = [data[key], value];
+                    }
                 } else {
                     data[key] = [value];
                 }
             });
 
-const record = {
-    fields: {
-        "Alter": data['age'][0], // Beispiel: falls ein Dropdown verwendet wird
-        "Geschlecht": data['gender'][0],
-        "Religion": data['religion'][0],
-        "Wissen über Sterbehilfe": data['knowEuthanasia'][0],
-        "Sterbehilfe Unterstützung": data['supportEuthanasia'][0],
-        "Erfahrung mit Sterbehilfe": data['experienceEuthanasia'][0],
-        "Sterbehilfe Anspruch": (data['euthanasiaEligibility'] || []).join(', '),
-        "Sterbehilfe Oma": data['euthanasiaEligibility90'][0],
-        "Sterbehilfe Kind": data['euthanasiaEligibilityChild'][0],
-        "Sterbehilfe Familienvater": data['euthanasiaEligibilityFather'][0],
-        "Sterbehilfe Frau": data['euthanasiaEligibilityWoman'][0],
-        "Sterbehilfe Soldat": data['euthanasiaPTBS'][0],
-        "Sterbehilfe Bipolar": data['euthanasiaBipolar'][0],
-        "Sterbehilfe MECFS": data['euthanasiaMECFS'][0],
-        "Sterbehilfe Down-Syndrom": data['euthanasiaDownSyndrome'][0],
-        "Sterbehilfe Querschnittsgelähmt": data['euthanasiaParalysis'][0],
-        "Entscheider": (data['decisionMaker'] || []).join(', '),
-        "Durchführer": (data['whoConducts'] || []).join(', '),
-        "Moralische Vertretbarkeit": data['moralEuthanasia'][0],
-        "Wissen über andere Länder": data['knowOtherCountries'][0],
-        "Finale Unterstützung der Sterbehilfe": data['supportEuthanasiaFinal'][0],
-    }
-};
+            const record = {
+                fields: {
+                    "Alter": data['age'][0],
+                    "Geschlecht": data['gender'][0],
+                    "Religion": data['religion'][0],
+                    "Wissen über Sterbehilfe": data['knowEuthanasia'][0],
+                    "Sterbehilfe Unterstützung": (data['supportEuthanasia'] || []).join(', '),
+                    "Erfahrung mit Sterbehilfe": data['experienceEuthanasia'][0],
+                    "Sterbehilfe Anspruch": (data['whoCanClaimEuthanasia'] || []).join(', '),
+                    "Sterbehilfe Oma": data['ageWOMAN'][0],
+                    "Sterbehilfe Kind": data['ageKID1'][0],
+                    "Sterbehilfe Familienvater": data['ageFATHER'][0],
+                    "Sterbehilfe Frau": data['ageWOMAN2'][0],
+                    "Sterbehilfe Soldat": data['ageSOLDIER'][0],
+                    "Sterbehilfe Bipolar": data['ageKID2'][0],
+                    "Sterbehilfe MECFS": data['ageWOMAN3'][0],
+                    "Sterbehilfe Down-Syndrom": data['ageGIRL'][0],
+                    "Sterbehilfe Querschnittsgelähmt": data['ageMAN'][0],
+                    "Entscheider": (data['whoDecides'] || []).join(', '),
+                    "Durchführer": (data['whoPerforms'] || []).join(', '),
+                    "Moralische Vertretbarkeit": data['moralEuthanasia'][0],
+                    "Wissen über andere Länder": data['knowOtherCountries'][0],
+                    "Finale Unterstützung der Sterbehilfe": data['supportEuthanasiaFinal'][0],
+                }
+            };
 
             // Airtable API Setup
             const apiUrl = 'https://api.airtable.com/v0/appfvYCuahubaO54i/Umfrage'; // Ersetze mit deiner Base ID und Tabellenname
@@ -397,7 +402,7 @@ const record = {
             })
             .catch(error => {
                 console.error('Fehler beim Senden der Daten:', error);
-                alert('Es gab ein Problem beim Absenden der Umfrage.');
+                alert('Es gab ein Problem beim Absenden der Umfrage: ' + error.message);
             });
         });
 
@@ -419,17 +424,19 @@ const record = {
             }
         }
 
-        // Zeigt die Unterstützung der Sterbehilfe basierend auf der vorherigen Frage an
-        document.querySelectorAll('input[name="knowEuthanasia"]').forEach(input => {
-            input.addEventListener('change', function() {
-                const supportElement = document.getElementById("euthanasiaSupport");
-                if (this.value === "Ja") {
-                    supportElement.style.display = "block";
-                } else {
-                    supportElement.style.display = "none";
-                }
-            });
-        });
+        // Tooltip-Funktionen
+        function showTooltip(event, text) {
+            const tooltip = document.getElementById('tooltip');
+            tooltip.innerHTML = text;
+            tooltip.style.display = 'block';
+            tooltip.style.left = event.pageX + 'px';
+            tooltip.style.top = event.pageY + 'px';
+        }
+
+        function hideTooltip() {
+            const tooltip = document.getElementById('tooltip');
+            tooltip.style.display = 'none';
+        }
     </script>
 </body>
 
