--- a/index.html
+++ b/index.html
@@ -372,17 +372,29 @@
             }
 
             // Record für Airtable
-            const record = {
-                fields: {
-                    "Alter": data['age'][0],
-                    "Geschlecht": data['gender'][0],
-                    "Religion": data['religion'][0],
-                    "Wissen über Sterbehilfe": data['knowEuthanasia'] ? data['knowEuthanasia'][0] : 'Nicht angegeben',
-                    "Sterbehilfe Unterstützung": (data['supportEuthanasia'] || []).join(', '),
-                    "Erfahrung mit Sterbehilfe": data['experienceEuthanasia'] ? data['experienceEuthanasia'][0] : 'Nicht angegeben',
-                    // Weitere Felder hinzufügen...
-                }
-            };
+        const record = {
+    fields: {
+        "Alter": data['age'][0],
+        "Geschlecht": data['gender'][0],
+        "Religion": data['religion'][0],
+        "Wissen über Sterbehilfe": data['knowEuthanasia'][0],
+        "Sterbehilfe Anspruch": data['euthanasiaClaim'][0],
+        "Sterbehilfe Oma": data['euthanasiaGrandmother'][0],
+        "Sterbehilfe Kind": data['euthanasiaChild'][0],
+        "Sterbehilfe Familienvater": data['euthanasiaFather'][0],
+        "Sterbehilfe Frau": data['euthanasiaWoman'][0],
+        "Sterbehilfe Soldat": data['euthanasiaSoldier'][0],
+        "Sterbehilfe Bipolar": data['euthanasiaBipolar'][0],
+        "Sterbehilfe MECFS": data['euthanasiaMECFS'][0],
+        "Sterbehilfe Down-Syndrom": data['euthanasiaDownSyndrome'][0],
+        "Sterbehilfe Querschnittsgelähmter": data['euthanasiaParalyzed'][0],
+        "Entscheider": data['whoDecides'][0],
+        "Durchführer": data['whoPerforms'][0],
+        "Moralische Vertretbarkeit": data['moralEuthanasia'][0],
+        "Wissen über andere Länder": data['knowOtherCountries'][0],
+        "Finale Unterstützung": data['supportEuthanasiaFinal'][0],
+    }
+};
 
             // API Setup
             const apiUrl = 'https://api.airtable.com/v0/appfvYCuahubaO54i/Umfrage'; // Ersetzen mit Ihrer Base-ID
