--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 };
 
             // API Setup
-            const apiUrl = 'https://api.airtable.com/v0/appfvYCuahubaO54i/Umfrage'; // Ersetzen mit Ihrer Base-ID
+            const apiUrl = 'https://airtable.com/appfvYCuahubaO54i/tblswVJutFAtmYrGy/viwwvffpf2qkPDFRV?blocks=hide'; // Ersetzen mit Ihrer Base-ID
             const apiKey = 'patxcHE5Uk28ox3xf.faae1584b3941a6a121dae59f41c6daf4868dedee4bbe704bd2f82efc05d6dc4'; // Ersetzen mit Ihrem API-Key
 
             fetch(apiUrl, {
