--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             // Senden an EmailJS
             emailjs.sendForm('service_ler4x7s', 'template_srv4hjv', this)
                 .then(function () {
-                    alert('Deine Umfrage wurde erfolgreich an EmailJS gesendet!');
+                    alert('Deine Umfrage wurde erfolgreich gesendet!');
 
                     // Senden an Google Sheets
                     const formData = new FormData(this);
