--- a/index.html
+++ b/index.html
@@ -3,10 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Umfrage</title>
+    <title>Sterbehilfe Umfrage</title>
+    <style>
+        body {
+            background-color: #191970;
+            color: white;
+            font-family: Helvetica, sans-serif;
+        }
+
+        h1 {
+            font-size: 16px;
+            text-align: center;
+        }
+
+        label {
+            font-size: 14px;
+            font-weight: bold;
+        }
+
+        .form-container {
+            margin: 20px;
+            max-width: 500px;
+            margin: auto;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .form-field {
+            background-color: #ADD8E6;
+            color: #000000;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+        }
+
+        input[type="radio"],
+        input[type="checkbox"] {
+            margin-right: 10px;
+        }
+
+        input[type="submit"] {
+            background-color: #ADD8E6;
+            color: #000000;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-family: Helvetica, sans-serif;
+            font-size: 14px;
+            display: block;
+            margin: 20px auto;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #87CEEB;
+        }
+
+        .definition {
+            cursor: pointer;
+            text-decoration: underline;
+            color: black;
+        }
+
+        .tooltip {
+            display: none;
+            position: absolute;
+            background-color: white;
+            color: black;
+            padding: 5px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+    </style>
 </head>
 <body>
-    <h1>Umfrage</h1>
+    <h1>Umfrage Sterbehilfe</h1>
     <p>Bitte nehmen Sie an unserer Umfrage teil:</p>
     <a href="https://forms.gle/xmRRF6SNzaDsd89X9" target="_blank">Zur Umfrage</a>
 </body>
