--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
             color: black;
         }
 
+        /* Hier wird das Feld "Zur Umfrage" angepasst */
+        .survey-link {
+            background-color: #00FFB3; /* Electric Peppermint */
+            color: black; /* Schriftfarbe auf schwarz */
+            padding: 10px;
+            text-align: center;
+            border-radius: 5px;
+            display: inline-block; /* Damit der Link als Block angezeigt wird */
+            margin: 20px auto; /* Zentriert */
+            text-decoration: none; /* Ohne Unterstreichung */
+        }
+
         .tooltip {
             display: none;
             position: absolute;
@@ -80,6 +92,6 @@
 <body>
     <h1>Umfrage Sterbehilfe</h1>
     <p>Bitte nehmen Sie an unserer Umfrage teil:</p>
-    <a href="https://forms.gle/xmRRF6SNzaDsd89X9" target="_blank">Zur Umfrage</a>
+        <a href="#" class="survey-link">Zur Umfrage</a> <!-- Link "Zur Umfrage" -->
 </body>
 </html>
