--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <body>
     <h1>Umfrage Sterbehilfe</h1>
     <p>Bitte nehmen Sie an unserer Umfrage teil:</p>
-        <a href="#" class="survey-link">Zur Umfrage</a> <!-- Link "Zur Umfrage" -->
+        <a href="https://forms.gle/g7vbGsicgpgxfa9W7" class="survey-link">Zur Umfrage</a> <!-- Link "Zur Umfrage" -->
+    </div>
 </body>
 </html>
